# mcp_gmail_calender

./: .gitignore  README.md  pyproject.toml  requirements.txt
mcp_config/: mcp_servers_file.json
mlruns/0/: meta.yaml
mlruns/0/traces/0642fb4e5b0c425c82c30502965d38b1/: trace_info.yaml
mlruns/0/traces/0fdb6ccdd03846dab7fb94de0b18b0e6/: trace_info.yaml
mlruns/0/traces/15a569b018a04a9ba22f7c8746da9d9c/: trace_info.yaml
mlruns/0/traces/1767f1050dab43449e26b770123a902e/: trace_info.yaml
mlruns/0/traces/35bf17bd8a9e4e52b5a78dd6a6c34e13/: trace_info.yaml
mlruns/0/traces/3e3c4b04fce34efb8f502f1dfc17e41e/: trace_info.yaml
mlruns/0/traces/4815d0a2824e4b81a30d61f46e986eab/: trace_info.yaml
mlruns/0/traces/5f996076a8f34145824973d271a24b0a/: trace_info.yaml
mlruns/0/traces/ae936e6eb6db482a8e3d50e9c463a9b5/: trace_info.yaml
mlruns/0/traces/da4096443fec4ef3963aab692c56dfcf/: trace_info.yaml
mlruns/190145532795978800/: meta.yaml
mlruns/190145532795978800/traces/54725a2e17734b84b2b280df6b5362c7/: trace_info.yaml
mlruns/190145532795978800/traces/7a219f2ccbe04abfb1c50eb7ef84ae50/: trace_info.yaml
mlruns/190145532795978800/traces/92f6492d66084240acfa7798c0ddddf5/: trace_info.yaml
mlruns/190145532795978800/traces/b7ec724db1ab49dab0cd31fd5cd355b5/: trace_info.yaml
mlruns/190145532795978800/traces/c74eecb93fda48dd9ae38a51a6165c21/: trace_info.yaml
mlruns/380586657640057097/: meta.yaml
mlruns/620343823321459513/: meta.yaml
mlruns/688622960353979579/: meta.yaml
mlruns/982919632007315400/: meta.yaml
server/: langchain_server
(+116 files in other folders)
